# eval

./: CMakeLists.txt  DynamicQueue.hpp  DynamicStack.hpp  Expression.hpp  main.cpp
test/: TestDynamicStack.cpp
